Added About Me section and made nav hover effect better

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/hero.css" />
+    <link rel="stylesheet" href="./css/aboutme.css" />
     <title>TokoDev &mdash; Portfolio</title>
   </head>
   <body>
@@ -110,7 +111,82 @@
 
       <!-- About Section -->
       <section class="section-about">
-        <div class="container"></div>
+        <div class="container">
+          <h1 class="aboutme-title">About Me</h1>
+          <div class="aboutme-grid">
+            <div class="aboutme-container-1">
+              <p class="aboutme-description --1">
+                Im a passionate fullstack developer based in germany, i got much
+                experiance from self made projects. Im still trying to improve
+                on every project I do. I love thinking about good solutions for
+                realtime projects
+              </p>
+
+              <p class="aboutme-description --2">
+                My journey started with creating Minecraft scripts in
+                Javascript, i continued learning HTML5, CSS3 and JAVASCRIPT. Im
+                actively taking more and more courses to improve my skills.
+              </p>
+
+              <div class="boxes">
+                <div class="box">
+                  <h3 class="box-number">1+</h3>
+                  <p class="box-description">Years Experience</p>
+                </div>
+                <div class="box">
+                  <h3 class="box-number">2</h3>
+                  <p class="box-description">Active Projects</p>
+                </div>
+                <div class="box">
+                  <h3 class="box-number">∞</h3>
+                  <p class="box-description">Problems Solved</p>
+                </div>
+              </div>
+            </div>
+            <div class="aboutme-container-2">
+              <div class="box-container-aboutme">
+                <h3 class="name">Toko Stark</h3>
+                <p class="location">
+                  <span class="location-symbol">DE</span
+                  ><span class="location-fullname">Germany</span>
+                </p>
+
+                <div class="aboutme-container-skills">
+                  <span class="aboutme-skill"
+                    ><span class="aboutme-skill-icon"
+                      ><ion-icon
+                        class="aboutme-skill-icon--"
+                        name="code-outline"
+                      ></ion-icon></span
+                    ><span class="aboutme-skill-text"
+                      >Full-Stack Developer</span
+                    ></span
+                  >
+                  <span class="aboutme-skill"
+                    ><span class="aboutme-skill-icon"
+                      ><ion-icon
+                        class="aboutme-skill-icon--"
+                        name="server-outline"
+                      ></ion-icon></span
+                    ><span class="aboutme-skill-text"
+                      >System Administrator</span
+                    ></span
+                  >
+                  <span class="aboutme-skill"
+                    ><span class="aboutme-skill-icon"
+                      ><ion-icon
+                        class="aboutme-skill-icon--"
+                        name="school-outline"
+                      ></ion-icon></span
+                    ><span class="aboutme-skill-text"
+                      >Continuous Learner</span
+                    ></span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Skill Section -->
