--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
           <div class="aboutme-grid">
             <div class="aboutme-container-1">
               <p class="aboutme-description --1">
-                Im a passionate fullstack developer based in germany, i got much
-                experiance from self made projects. Im still trying to improve
-                on every project I do. I love thinking about good solutions for
-                realtime projects
+                I’m a 16-year-old passionate full-stack developer from Germany,
+                gaining most of my experience through self-driven projects. I
+                constantly aim to improve with every project I take on and enjoy
+                designing thoughtful solutions for real-time, practical
+                problems.
               </p>
-
               <p class="aboutme-description --2">
-                My journey started with creating Minecraft scripts in
-                Javascript, i continued learning HTML5, CSS3 and JAVASCRIPT. Im
-                actively taking more and more courses to improve my skills.
+                My journey began with creating Minecraft scripts in JavaScript.
+                From there, I continued learning HTML5, CSS3, and JavaScript,
+                and I’m actively taking courses to further expand my skill set.
               </p>
 
               <div class="boxes">
