Update hero section: enhance rotator display and adjust dimensions

--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
             <h2 class="hero-title">toko_stark</h2>
             <div class="dev-showcase">
               <span class="rotator">
-                <span class="showcase">Frontend</span>
-                <span class="showcase">Backend</span>
-                <span class="showcase">Fullstack</span>
+                <span class="showcase">Frontend Developer</span>
+                <span class="showcase">Backend Developer</span>
+                <span class="showcase">Fullstack Developer</span>
               </span>
-              <span>Developer</span>
             </div>
 
             <p class="hero-description">
