Add favicon to the project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="./css/aboutme.css" />
 
     <link rel="stylesheet" href="css/queries.css" />
+
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <title>TokoDev &mdash; Portfolio</title>
   </head>
   <body>
