--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/hero.css" />
     <link rel="stylesheet" href="./css/aboutme.css" />
+    <link rel="stylesheet" href="./css/skills.css" />
 
     <link rel="stylesheet" href="css/queries.css" />
 
@@ -205,7 +206,77 @@
 
       <!-- Skill Section -->
       <section class="section-skills">
-        <div class="container"></div>
+        <div class="container">
+          <div class="skill-section-title">Skills & Technologies</div>
+          <div class="skills-grid">
+            <div class="box-skill box-programming-languages">
+              <h3 class="box-title">Programming Languages</h3>
+              <ul class="skills-list">
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="logo-html5"></ion-icon>
+                  <span class="skill-text">HTML5</span>
+                </li>
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="logo-css3"></ion-icon>
+                  <span class="skill-text">CSS3</span>
+                </li>
+                <li class="skill-item">
+                  <ion-icon
+                    class="skill-logo"
+                    name="logo-javascript"
+                  ></ion-icon>
+                  <span class="skill-text">JavaScript</span>
+                </li>
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="logo-nodejs"></ion-icon>
+                  <span class="skill-text">Node.js</span>
+                </li>
+              </ul>
+            </div>
+            <div class="box-skill box-frameworks-libraries">
+              <h3 class="box-title">Frameworks & Libraries</h3>
+              <ul class="skills-list">
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="logo-github"></ion-icon>
+                  <span class="skill-text">Git/GitHub</span>
+                </li>
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="cog-outline"></ion-icon>
+                  <span class="skill-text">Express.js</span>
+                </li>
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="layers-outline"></ion-icon>
+                  <span class="skill-text">MongoDB</span>
+                </li>
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="build-outline"></ion-icon>
+                  <span class="skill-text">Bash/Shell</span>
+                </li>
+              </ul>
+            </div>
+            <div class="box-skill box-featured-learnings">
+              <h3 class="box-title">Featured Learnings</h3>
+              <ul class="skills-list">
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="logo-python"></ion-icon>
+                  <span class="skill-text">Python</span>
+                </li>
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="logo-react"></ion-icon>
+                  <span class="skill-text">React.js</span>
+                </li>
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="flash-outline"></ion-icon>
+                  <span class="skill-text">Next.js</span>
+                </li>
+                <li class="skill-item">
+                  <ion-icon class="skill-logo" name="server-outline"></ion-icon>
+                  <span class="skill-text">MySQL</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Projects Section -->
