Implement scroll reveal effects and smooth scrolling for navigation links

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           <a href="#" class="logo-text">TokoDev</a>
         </div>
         <ul class="nav-links hidden">
-          <li><a class="nav-link" href="#">Home</a></li>
-          <li><a class="nav-link" href="#">About</a></li>
-          <li><a class="nav-link" href="#">Skills</a></li>
-          <li><a class="nav-link" href="#">Contact</a></li>
+          <li><a class="nav-link" href="#hero">Home</a></li>
+          <li><a class="nav-link" href="#aboutme">About</a></li>
+          <li><a class="nav-link" href="#skill">Skills</a></li>
+          <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <ion-icon class="nav-menu hidden" name="menu-outline"></ion-icon>
 
@@ -58,7 +58,7 @@
 
     <main>
       <!-- Hero Section -->
-      <section class="section-hero">
+      <section id="hero" class="section-hero">
         <div class="container container--grid --hero-grid">
           <div class="grid-container-1">
             <p class="hero-subtitle">Hello, I'm</p>
@@ -125,7 +125,7 @@
       </section>
 
       <!-- About Section -->
-      <section class="section-about">
+      <section id="aboutme" class="section-about">
         <div class="container">
           <h1 class="aboutme-title">About Me</h1>
           <div class="aboutme-grid">
@@ -195,7 +195,7 @@
       </section>
 
       <!-- Skill Section -->
-      <section class="section-skills">
+      <section id="skill" class="section-skills">
         <div class="container">
           <div class="skill-section-title">Skills & Technologies</div>
           <div class="skills-grid">
@@ -270,7 +270,7 @@
       </section>
 
       <!-- Contact Section -->
-      <section class="section-contact">
+      <section id="contact" class="section-contact">
         <div class="container">
           <div class="contact-box">
             <h2>Get in Touch</h2>
@@ -322,5 +322,7 @@
         </div>
       </section>
     </main>
+
+    <script src="./js/scrollEffect.js"></script>
   </body>
 </html>
