Add JavaScript icon and enhance skills section layout
- Introduced a new SVG icon for JavaScript in the assets/icons directory.
- Updated CSS for responsive design in queries.css, adjusting tech stack box and logo sizes for various screen widths.
- Refactored skills.css to improve styling for the skills section, including new gradients and hover effects for tech stack boxes.
- Modified index.html to replace the old skills section with a new layout featuring tech stack boxes and tooltips for each technology.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
         <ul class="nav-links hidden">
           <li><a class="nav-link" href="#hero">Home</a></li>
+          <li><a class="nav-link" href="#terminal">Terminal</a></li>
           <li><a class="nav-link" href="#aboutme">About</a></li>
           <li><a class="nav-link" href="#skill">Skills</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
@@ -127,6 +128,7 @@
 
       <!-- Terminal Section / Linux Webshell -->
       <section id="terminal" class="section-terminal">
+        <h1 class="skill-heading">Terminal</h1>
         <div class="terminal-window">
           <div class="terminal-header">
             <div class="terminal-buttons">
@@ -236,75 +238,68 @@
 
       <!-- Skill Section -->
       <section id="skill" class="section-skills">
-        <div class="container">
-          <div class="skill-section-title">Skills & Technologies</div>
-          <div class="skills-grid">
-            <div class="box-skill box-programming-languages">
-              <h3 class="box-title">Programming Languages</h3>
-              <ul class="skills-list">
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="logo-html5"></ion-icon>
-                  <span class="skill-text">HTML5</span>
-                </li>
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="logo-css3"></ion-icon>
-                  <span class="skill-text">CSS3</span>
-                </li>
-                <li class="skill-item">
-                  <ion-icon
-                    class="skill-logo"
-                    name="logo-javascript"
-                  ></ion-icon>
-                  <span class="skill-text">JavaScript</span>
-                </li>
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="logo-nodejs"></ion-icon>
-                  <span class="skill-text">Node.js</span>
-                </li>
-              </ul>
-            </div>
-            <div class="box-skill box-frameworks-libraries">
-              <h3 class="box-title">Frameworks & Libraries</h3>
-              <ul class="skills-list">
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="logo-github"></ion-icon>
-                  <span class="skill-text">Git/GitHub</span>
-                </li>
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="cog-outline"></ion-icon>
-                  <span class="skill-text">Express.js</span>
-                </li>
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="layers-outline"></ion-icon>
-                  <span class="skill-text">MongoDB</span>
-                </li>
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="build-outline"></ion-icon>
-                  <span class="skill-text">Bash/Shell</span>
-                </li>
-              </ul>
-            </div>
-            <div class="box-skill box-featured-learnings">
-              <h3 class="box-title">Featured Learnings</h3>
-              <ul class="skills-list">
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="logo-python"></ion-icon>
-                  <span class="skill-text">Python</span>
-                </li>
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="logo-react"></ion-icon>
-                  <span class="skill-text">React.js</span>
-                </li>
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="flash-outline"></ion-icon>
-                  <span class="skill-text">Next.js</span>
-                </li>
-                <li class="skill-item">
-                  <ion-icon class="skill-logo" name="server-outline"></ion-icon>
-                  <span class="skill-text">MySQL</span>
-                </li>
-              </ul>
-            </div>
+        <div class="container skills-section-container" id="skills">
+          <div class="skills-section">
+            <h2 class="skill-heading">&lt;/Skills&gt;</h2>
+
+            <ul class="tech-stack-wrapper">
+              <li class="tech-stack-box">
+                <img
+                  src="assets/icons/html5.svg"
+                  alt="HTML5 logo"
+                  class="tech-stack-logo"
+                />
+                <span class="tooltip">HTML5</span>
+              </li>
+              <li class="tech-stack-box">
+                <img
+                  src="assets/icons/css3.svg"
+                  alt="CSS3 logo"
+                  class="tech-stack-logo"
+                />
+                <span class="tooltip">CSS3</span>
+              </li>
+              <li class="tech-stack-box">
+                <img
+                  src="assets/icons/javascript.svg"
+                  alt="JavaScript logo"
+                  class="tech-stack-logo"
+                />
+                <span class="tooltip">JavaScript</span>
+              </li>
+              <li class="tech-stack-box">
+                <img
+                  src="assets/icons/github.svg"
+                  alt="GitHub logo"
+                  class="tech-stack-logo invert-dark"
+                />
+                <span class="tooltip">GitHub</span>
+              </li>
+              <li class="tech-stack-box">
+                <img
+                  src="assets/icons/git.svg"
+                  alt="Git logo"
+                  class="tech-stack-logo"
+                />
+                <span class="tooltip">Git</span>
+              </li>
+              <li class="tech-stack-box">
+                <img
+                  src="assets/icons/figma.svg"
+                  alt="Figma logo"
+                  class="tech-stack-logo"
+                />
+                <span class="tooltip">Figma</span>
+              </li>
+              <li class="tech-stack-box">
+                <img
+                  src="assets/icons/canva.svg"
+                  alt="Canva logo"
+                  class="tech-stack-logo"
+                />
+                <span class="tooltip">Canva</span>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
