Add Kali Linux to the tech stack section in index.html

--- a/index.html
+++ b/index.html
@@ -299,6 +299,14 @@
                 />
                 <span class="tooltip">Canva</span>
               </li>
+              <li class="tech-stack-box">
+                <img
+                  src="assets/icons/linux.svg"
+                  alt="Canva logo"
+                  class="tech-stack-logo"
+                />
+                <span class="tooltip">Kali Linux</span>
+              </li>
             </ul>
           </div>
         </div>
