Connecting Form to netlify.app

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                   <p class="contact-email">Email Me</p>
                 </div>
               </div>
-              <form id="contact-form" class="form">
+              <form id="contact-form" class="form" netlify>
                 <h3>Contact Form</h3>
                 <div class="firstRow">
                   <input
