Updated Netlify Form

--- a/index.html
+++ b/index.html
@@ -338,20 +338,28 @@
                   <input
                     type="text"
                     class="input-field"
+                    name="name"
                     placeholder="Your Name*"
                     required
                   />
                   <input
                     type="email"
                     class="input-field"
+                    name="email"
                     placeholder="Your Email*"
                     required
                   />
                 </div>
                 <div class="secondRow">
-                  <input type="text" placeholder="Subject*" required />
+                  <input
+                    type="text"
+                    name="subject"
+                    placeholder="Subject*"
+                    required
+                  />
                   <textarea
                     class="input-field textarea-field"
+                    name="message"
                     placeholder="Your Message*"
                     required
                   ></textarea>
