Update Discord link and mail anchor in hero section

--- a/index.html
+++ b/index.html
@@ -87,10 +87,12 @@
               <a href="https://github.com/toko-stark" class="link-icons github"
                 ><ion-icon class="link-icon" name="logo-github"></ion-icon
               ></a>
-              <a href="" class="link-icons discord"
+              <a
+                href="https://discord.com/users/789894696176058368"
+                class="link-icons discord"
                 ><ion-icon class="link-icon" name="logo-discord"></ion-icon
               ></a>
-              <a href="#" class="link-icons mail"
+              <a href="#contact" class="link-icons mail"
                 ><ion-icon class="link-icon" name="mail-outline"></ion-icon
               ></a>
             </div>
