Update hero section links to improve navigation and add target attributes for external links

--- a/index.html
+++ b/index.html
@@ -81,19 +81,30 @@
 
             <div class="hero-btns">
               <a href="#" class="btn btn--primary">View My Work</a>
-              <a href="#" class="btn btn--secondary">Contact Me</a>
+              <a href="#contact" class="btn btn--secondary">Contact Me</a>
             </div>
             <div class="hero-links">
-              <a href="https://github.com/toko-stark" class="link-icons github"
+              <a
+                href="https://github.com/toko-stark"
+                target="_blank"
+                class="link-icons github"
                 ><ion-icon class="link-icon" name="logo-github"></ion-icon
               ></a>
               <a
                 href="https://discord.com/users/789894696176058368"
                 class="link-icons discord"
-                ><ion-icon class="link-icon" name="logo-discord"></ion-icon
+                ><ion-icon
+                  class="link-icon"
+                  target="_blank"
+                  name="logo-discord"
+                ></ion-icon
               ></a>
               <a href="#contact" class="link-icons mail"
-                ><ion-icon class="link-icon" name="mail-outline"></ion-icon
+                ><ion-icon
+                  class="link-icon"
+                  target="_blank"
+                  name="mail-outline"
+                ></ion-icon
               ></a>
             </div>
           </div>
