Refactor hero section links to remove redundant target attributes

--- a/index.html
+++ b/index.html
@@ -93,18 +93,11 @@
               <a
                 href="https://discord.com/users/789894696176058368"
                 class="link-icons discord"
-                ><ion-icon
-                  class="link-icon"
-                  target="_blank"
-                  name="logo-discord"
-                ></ion-icon
+                target="_blank"
+                ><ion-icon class="link-icon" name="logo-discord"></ion-icon
               ></a>
               <a href="#contact" class="link-icons mail"
-                ><ion-icon
-                  class="link-icon"
-                  target="_blank"
-                  name="mail-outline"
-                ></ion-icon
+                ><ion-icon class="link-icon" name="mail-outline"></ion-icon
               ></a>
             </div>
           </div>
