Update about me section styles and add profile image

--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@
             </div>
             <div class="aboutme-container-2">
               <div class="box-container-aboutme">
+                <img
+                  src="./assets/favicon.ico"
+                  alt="TokoDev Logo"
+                  class="aboutme-img"
+                />
                 <h3 class="name">Toko Stark</h3>
                 <p class="location">
                   <span class="location-symbol">DE</span
