--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
               </p>
               <div class="buttons-projects">
                 <a
-                  href="https://github.com/toko-stark/omnifood"
+                  href="https://live-omnifood.netlify.app/"
                   class="btn btn--primary project-link --disabled"
                   target="_blank"
                   >Live Demo</a
@@ -380,7 +380,7 @@
               </p>
               <div class="buttons-projects">
                 <a
-                  href="https://github.com/toko-stark/NutriVisionAI"
+                  href="https://demo-nutrivisionai.netlify.app/"
                   class="btn btn--primary project-link"
                   target="_blank"
                   >Live Demo</a
