Remove disabled class from project link button for improved functionality

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
               <div class="buttons-projects">
                 <a
                   href="https://live-omnifood.netlify.app/"
-                  class="btn btn--primary project-link --disabled"
+                  class="btn btn--primary project-link"
                   target="_blank"
                   >Live Demo</a
                 >
