Add footer section with links and copyright information

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/skills.css" />
     <link rel="stylesheet" href="./css/projects.css" />
     <link rel="stylesheet" href="./css/contact.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
 
     <link rel="stylesheet" href="./css/queries.css" />
 
@@ -344,7 +345,7 @@
               </p>
               <div class="buttons-projects">
                 <a
-                  href="https://live-omnifood.netlify.app/"
+                  href="https://tokodev-omnifood.netlify.app/"
                   class="btn btn--primary project-link"
                   target="_blank"
                   >Live Demo</a
@@ -380,7 +381,7 @@
               </p>
               <div class="buttons-projects">
                 <a
-                  href="https://demo-nutrivisionai.netlify.app/"
+                  href="https://tokodev-nutrivisionai.netlify.app/"
                   class="btn btn--primary project-link"
                   target="_blank"
                   >Live Demo</a
@@ -551,5 +552,26 @@
     <script src="./js/terminal.js"></script>
     <script src="./js/scrollEffect.js"></script>
     <script src="./js/projectHover.js"></script>
+
+    <footer class="footer">
+      <div class="container footer-content">
+        <p class="footer-text">© 2025 TokoDev. Built with ❤️</p>
+        <div class="footer-links">
+          <a
+            class="footer-link"
+            href="https://github.com/toko-stark"
+            target="_blank"
+            rel="noreferrer"
+          >
+            <ion-icon name="logo-github"></ion-icon>
+            GitHub
+          </a>
+          <a class="footer-link" href="#contact">
+            <ion-icon name="mail-outline"></ion-icon>
+            Contact
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
