Enhance project layout with responsive grid and update hero button link

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </p>
 
             <div class="hero-btns">
-              <a href="#" class="btn btn--primary">View My Work</a>
+              <a href="#projects" class="btn btn--primary">View My Work</a>
               <a href="#contact" class="btn btn--secondary">Contact Me</a>
             </div>
             <div class="hero-links">
